--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,3 @@
-{{#ui-toolbar title="AWS MobileHub EmberJS" logout=(action "onLogout")}}
+{{#ui-toolbar title="Mobile Hub Ember.js" logout=(action "onLogout")}}
 	{{outlet}}
 {{/ui-toolbar}}
