--- a/app/templates/components/ui-note-list.hbs
+++ b/app/templates/components/ui-note-list.hbs
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="notes-container">
 	<div class="mdc-grid-list mdc-grid-list--with-icon-align-start">
 	  <ul class="mdc-grid-list__tiles">
 	  	{{#unless notes.length}}
